ui: update subtitle

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
         <a href="/" class="brand-link">TaskPilot</a>
         <span class="badge">PBL</span>
       </div>
-      <div class="muted">Mini Kanban + komentarze + log aktywności</div>
+      <div class="muted">Kanban dla projektu studenckiego</div>
     </div>
   </header>
 
